# nearshare-rs

./: Cargo.toml  LICENSE  README.md  frontend.html
src/: main.rs  nearshare-rs.d
