[package]
name = "nearshare-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9"
actix-multipart = "0.7"
serde = {version="1.0",features = ["derive"]}
aes-gcm = "0.10"
rand = "0.8"
mdns-sd = "0.11"
tokio = {version = "1.40", features = ["full"]}
futures-util = "0.3"
typenum = "1.19.0"
generic-array = "0.14.9"
rand_core = "0.9.3"